--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "whatsapp bot build with nodejs",
   "repository": "https://github.com/fuxionkali/bot",
   "logo": "https://c.top4top.io/p_2069qnvob1.jpg",
-  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"]
+  "keywords": ["nodejs", "bot", "whatsapp bot", "whatsapp automation"],
   "buildpacks": [{
     "url": "https://github.com/DuckyTeam/heroku-buildpack-imagemagick"
   }, {
